# adaptive-code-lab

./: .env.example  .gitignore  Dockerfile  FRONTEND_INTEGRATION_GUIDE.md  README-phase2.md  README-phase3.md  README.md  coverage.xml  docker-compose.yml  pytest.ini  render.yaml  requirements.txt  run.py  setup.cfg  verify_installation.py  wsgi.py
.github/workflows/: ci.yml
docs/: CSAI203_Final_Delivery_Team18_202301043.md  CSAI203_SRS_Team18_202301043.md  FRONTEND_STATUS_SUMMARY.md  index.html
docs/design/: CSAI203_Design_Team18_202301043.docx  CSAI203_Design_Team18_202301043.md
scripts/: cleanup_drafts.py  full_demo_seed.py  init_prod.bat  init_prod.py  init_prod.sh  run_prod.bat  run_prod.py  run_prod.sh  seed_drafts_for_e2e.py  seed_e2e_data.py  seed_test_data.py
src/DB/: Accl_DB.db  Creating_DB.py  connection.py  run_migrations.py  test.py
src/app/: app.py
src/config/: settings.py
src/web/: FRONTEND_README.md  app.py  utils.py
tests/: conftest.py  integration_api.py  test_apis.py  test_embeddings_install.py  verify_exceptions.py
tests/ai/: test_ai_clients.py  test_embeddings_setup.py
tests/db/: run_migrations.py  test_connection.py  test_creating_db.py  test_db_env.py  test_run_migrations.py
tests/integration/: test_draft_recovery.py  test_full_flow.py  test_grading_pipeline.py  test_instructor_workflow.py  test_peer_review_flow.py  test_plagiarism_detection.py  test_student_workflow.py
tests/performance/: test_bulk_operations.py  test_concurrent_access.py  test_query_performance.py
tests/postman/: accl_collection.json
(+324 files in other folders)
