[metadata]
name = adaptive-code-lab
version = 0.1.0
description = Adaptive Code Lab Project
author = Amr Yasser
author_email = amr.yasser200.26@gmail.com
license = MIT
long_description = file: README.md
long_description_content_type = text/markdown

[options]
packages = find:
package_dir =
    = src
python_requires = >=3.12
include_package_data = true

[options.packages.find]
where = src